# RayTracing

./: .gitignore  CMakeLists.txt
ext/include/glad/: glad.h
ext/src/: glad.c
include/: BRDF.h  Camera.h  EasyBMP.h  Intersectable.h  Lightsource.h  Object.h  Ray.h  RayTracing.h  Raytree.h  Scene.h  Sphere.h  Tetrahedron.h  Triangle.h  Utils.h
src/: Camera.cpp  EasyBMP.cpp  Lightsource.cpp  Object.cpp  Ray.cpp  RayTracing.cpp  Raytree.cpp  Scene.cpp  Sphere.cpp  Tetrahedron.cpp  Triangle.cpp
